# pipe_organ_pipeline

./: .gitignore  Dockerfile  Makefile  README.md  README_DOCKER.md  app.py  docker-compose.yml  pipeline.py  pyproject.toml  start.sh
templates/: base.html  index.html  processing.html  results.html
